[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Shitty Placeholder Stuff/stoor.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Shitty Placeholder Stuff/plingus.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Pointer.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Pour Minigame.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 253.674, 19.9604 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 179.654, 21.6331 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 50.5495, 21.7422 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 3.33194, 19.9604 )

[node name="Pour Minigame" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 513.668, 300.19 )
scale = Vector2( 0.533225, 0.472172 )
texture = ExtResource( 1 )

[node name="Bad" type="ColorRect" parent="."]
margin_left = 254.964
margin_top = 0.1091
margin_right = 761.964
margin_bottom = 40.1091
color = Color( 0.0823529, 0.0705882, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InBad" type="Area2D" parent="Bad"]
position = Vector2( -254.964, -0.1091 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bad/InBad"]
position = Vector2( 507.812, 19.5998 )
shape = SubResource( 1 )

[node name="Ok2" type="ColorRect" parent="."]
margin_left = 552.433
margin_top = 0.781792
margin_right = 684.433
margin_bottom = 41.7818
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok1" type="ColorRect" parent="."]
margin_left = 324.363
margin_top = -1.8909
margin_right = 456.363
margin_bottom = 39.1091
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InOk" type="Area2D" parent="Ok1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ok1/InOk"]
position = Vector2( 179.962, 23.1634 )
shape = SubResource( 3 )

[node name="Good" type="ColorRect" parent="."]
margin_left = 457.0
margin_right = 553.0
margin_bottom = 40.0
color = Color( 0.654902, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGood" type="Area2D" parent="Good"]
position = Vector2( -457, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Good/InGood"]
position = Vector2( 503.358, 19.5998 )
shape = SubResource( 5 )

[node name="Pointer" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Pointer"]
position = Vector2( 256.403, 52.1176 )
scale = Vector2( 0.316287, 0.316287 )
texture = ExtResource( 2 )

[node name="PointerHitBox" type="Area2D" parent="Pointer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pointer/PointerHitBox"]
position = Vector2( 261.924, 50.7812 )
shape = SubResource( 8 )

[connection signal="area_entered" from="Bad/InBad" to="Pointer" method="_on_InBad_area_entered"]
[connection signal="area_exited" from="Bad/InBad" to="Pointer" method="_on_InBad_area_exited"]
[connection signal="area_entered" from="Ok1/InOk" to="Pointer" method="_on_InOk_area_entered"]
[connection signal="area_exited" from="Ok1/InOk" to="Pointer" method="_on_InOk_area_exited"]
[connection signal="area_entered" from="Good/InGood" to="Pointer" method="_on_InGood_area_entered"]
[connection signal="area_exited" from="Good/InGood" to="Pointer" method="_on_InGood_area_exited"]
